<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    >
<!--    Use CustomEditText for all of your form fields-->
<!--    in Xml file and set each field name to fieldName(e.g Email),-->
<!--    that allows us to provide Form Behavioral Tracking.-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/already_nhave_an_naccount" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_register_hero" />
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="70dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:textColorHint="@color/hint">

                    <!--                    Field contents are not captured -->
                    <!--                    unless you add IncludeContentTracking Tag -->
                    <!--                    for the field that you need Field Content Tracking.-->
                    <com.crossclassify.trackersdk.utils.view.TrackerEditText
                        android:id="@+id/editTextEmail"

                        style="@style/modifiedEditText"
                        android:autofillHints="Email"

                        android:ellipsize="end"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:tag="@string/IsTrackable"
                        android:textColor="@color/black"
                        android:transitionName="@string/login_email_hint"
                        app:fieldName="email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:textColorHint="@color/hint">

                    <com.crossclassify.trackersdk.utils.view.TrackerEditText
                        android:id="@+id/editTextPassword"
                        style="@style/modifiedEditText"

                        android:autofillHints="Password"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:transitionName="@string/login_password_hint"
                        app:fieldName="password" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnSubmit"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/login" />

            <TextView
                android:id="@+id/txtRegister"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:onClick="onLoginClick"
                android:text="@string/new_user_register_now"
                android:textAlignment="center"
                android:textColor="@color/themeColor"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="20">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/use_other_methods"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/goToRecycler"
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="default / "
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/goToEpoxy"
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="epoxy/"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/goToEpoxy2"
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:text="epoxy2"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg" />

</RelativeLayout>

